# onchain-etl

./: .env.sample  LICENSE  README.md  ethereum_db_schema.sql  run-etl-full.sh
bq_to_pg/: .dockerignore  .env.sample  async_etl.py  docker-compose.yml  etl.py  requirements.txt
bq_to_pg/notebooks/: pandas_pqt_sql.ipynb
bq_to_pg/sql-export/: op_transactions_sums.sql
ethereum/: .dockerignore  .env.sample  Dockerfile  async_etl.py  docker-compose.yml  etl.py  pyproject.toml  requirements.txt  run-etl-full.sh  utils.py
ethereum/notebooks/: pgpq.ipynb
ethereum/sql-import/: eth_transactions_sums.sql  transaction_sums.sql
optimism/: run-etl-full.sh
optimism/sql-import/: optimism_transaction_sums.sql  transaction_sums.sql
schema/: db.sql  onchain_db_schema.sql
sql-import-full/: transaction_sums.sql
