[tool.poetry]
name = "eth-bq-pg-etl"
version = "0.1.0"
description = ""
authors = ["Vijay Mariadassou <vijay@karma3labs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^15.0.0"
pandas = "^2.2.0"
fastparquet = "^2024.2.0"
gcsfs = "^2024.2.0"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
